// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the WizardStage1 component. Should match snapshot. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="lg:flex gap-12"
  >
    <div
      class="lg:w-1/3"
    >
      <div
        class="text-sm my-2"
      >
        <div>
          Select the sector that your project supports
        </div>
      </div>
      <div
        class=" css-l45kjq-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-:r0:-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class="react-select__control css-qv4grc-control"
        >
          <div
            class="react-select__value-container css-17t7gkf-ValueContainer"
          >
            <div
              class="react-select__placeholder css-5rjclb-placeholder"
              id="react-select-:r0:-placeholder"
            >
              Select a Sector
            </div>
            <div
              class="react-select__input-container css-qbdosj-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-:r0:-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="react-select__input"
                id="react-select-id-undefined"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-wrap gap-3 mt-4"
      >
        <div
          class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
          data-testid="pill"
        >
          sector 1
          <svg
            class="cursor-pointer opacity-50"
            data-testid="remove-button"
            fill="currentColor"
            height="1.5em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1.5em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
            />
          </svg>
        </div>
        <div
          class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
          data-testid="pill"
        >
          sector 2
          <svg
            class="cursor-pointer opacity-50"
            data-testid="remove-button"
            fill="currentColor"
            height="1.5em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1.5em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="lg:w-1/3"
    >
      <div
        class="text-sm my-2"
      >
        Select a specific use case, if applicable
      </div>
      <div
        class=" css-l45kjq-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-:r1:-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class="react-select__control css-qv4grc-control"
        >
          <div
            class="react-select__value-container react-select__value-container--has-value css-17t7gkf-ValueContainer"
          >
            <div
              class="react-select__single-value css-1dimb5e-singleValue"
            >
              useCase
            </div>
            <div
              class="react-select__input-container css-qbdosj-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-expanded="false"
                aria-haspopup="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="react-select__input"
                id="react-select-id-undefined"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              class="react-select__indicator react-select__clear-indicator css-1xc3v61-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                />
              </svg>
            </div>
            <span
              class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="lg:w-1/3"
    >
      <div
        class="text-sm my-2"
      >
        Select any SDG that the project is designed to support
      </div>
      <div
        class=" css-l45kjq-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-:r2:-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class="react-select__control css-qv4grc-control"
        >
          <div
            class="react-select__value-container css-17t7gkf-ValueContainer"
          >
            <div
              class="react-select__placeholder css-5rjclb-placeholder"
              id="react-select-:r2:-placeholder"
            >
              Select an SDG
            </div>
            <div
              class="react-select__input-container css-qbdosj-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-:r2:-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="react-select__input"
                id="react-select-id-undefined"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-wrap gap-3 mt-4"
      >
        <div
          class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
          data-testid="pill"
        >
          sdg 1
          <svg
            class="cursor-pointer opacity-50"
            data-testid="remove-button"
            fill="currentColor"
            height="1.5em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1.5em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
            />
          </svg>
        </div>
        <div
          class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
          data-testid="pill"
        >
          sdg 2
          <svg
            class="cursor-pointer opacity-50"
            data-testid="remove-button"
            fill="currentColor"
            height="1.5em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1.5em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the WizardStage2 component. Should match snapshot. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="lg:flex gap-12"
  >
    <div
      class="lg:w-1/3"
    >
      <div
        class="text-sm my-2"
      >
        Select any tags that are applicable to this project
      </div>
      <div
        class=" css-l45kjq-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-:r3:-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class="react-select__control css-qv4grc-control"
        >
          <div
            class="react-select__value-container css-17t7gkf-ValueContainer"
          >
            <div
              class="react-select__placeholder css-5rjclb-placeholder"
              id="react-select-:r3:-placeholder"
            >
              Select a Tag
            </div>
            <div
              class="react-select__input-container css-qbdosj-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-:r3:-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="react-select__input"
                id="react-select-id-undefined"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-wrap gap-3 mt-4"
      />
    </div>
    <div
      class="lg:w-1/3"
    >
      <div
        class="text-sm my-2"
      >
        What country(s) will this project be implemented in?
      </div>
      <div
        class=" css-l45kjq-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-:r4:-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class="react-select__control css-qv4grc-control"
        >
          <div
            class="react-select__value-container css-17t7gkf-ValueContainer"
          >
            <div
              class="react-select__placeholder css-5rjclb-placeholder"
              id="react-select-:r4:-placeholder"
            >
              Select a Country
            </div>
            <div
              class="react-select__input-container css-qbdosj-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-:r4:-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class="react-select__input"
                id="react-select-id-undefined"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-wrap gap-3 mt-4"
      />
    </div>
    <div
      class="lg:w-1/3"
    >
      <div
        class="text-sm my-2"
      >
        Will mobile services be required for this project?
      </div>
      <div
        class="xl:grid xl:grid-cols-2 gap-2"
      >
        <div
          class="text-sm"
        >
          <label>
            <input
              class="h-8 w-8"
              data-testid="checkbox"
              type="checkbox"
            />
            <span
              class="pl-2"
            />
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
